--- a/ui/stylesheet.css
+++ b/ui/stylesheet.css
@@ -88,7 +88,6 @@ QLineEdit, QComboBox
 
 QPlainTextEdit, QListWidget
 {
-    color: gray;
     border-style: solid;
     background-color: rgb(43, 43, 43);
     selection-background-color: rgb(53, 53, 255);
@@ -108,7 +107,7 @@ QScrollBar {
 
 QScrollBar::handle
 {
-    background: gray;
+    background: rgb(53, 53, 255);
 }
 
 QScrollBar::add-line, QScrollBar::sub-line
